[project]
name = "native-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.17",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-text-splitters>=0.3.9",
    "pydantic-settings>=2.10.1",
    "unstructured>=0.18.13",
    "uvicorn>=0.35.0",
    "werkzeug>=3.1.3",
]
